--- a/assets/css/fbx.css
+++ b/assets/css/fbx.css
@@ -51,6 +51,13 @@ body.setup {
     border-bottom: 1px solid #777;
 }
 
+.setup .intro {
+    font-size: 85%;
+    font-style: italic;
+    line-height: 150%;
+    padding: 0 10px;
+}
+
 .setup .form-horizontal .control-label {
     font-size: 13px;
 }
