Affichage des erreurs de saisies et saisies précédentes à l'installation — close #5
* Affichage de la liste des erreurs en début de formulaire avec lien
vers le champ en question
* Mise en avant des champs en erreur
* Réaffichage de la saisie précédente en cas d'erreur, afin d'éviter de
tout recommencer
* Harmonisation des styles/titres de l'installation

--- a/assets/css/fbx.css
+++ b/assets/css/fbx.css
@@ -241,6 +241,11 @@ body.setup {
     padding: 0;
 }
 
+.setup .alert-error a {
+    color: inherit;
+    font-weight: bold;
+}
+
 .setup h2 {
     padding: 5px;
     margin: 10px 0;
