--- a/assets/css/fbx.css
+++ b/assets/css/fbx.css
@@ -7,6 +7,9 @@ body {
 }
 
 /*==========  Navbar  ==========*/
+.navbar-brand {
+    cursor: default;
+}
 .navbar-brand,
 .navbar .nav > li > a {
     padding-top: 5px;
