--- a/assets/css/fbx.css
+++ b/assets/css/fbx.css
@@ -1,6 +1,18 @@
+@import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,400italic|Source+Code+Pro') (min-width: 768px);
+
 body {
     padding: 0 10px;
+    -webkit-font-smoothing: antialiased;
+    font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
 }
+
+@media (min-width: 767px) {
+    code { font-family: 'Source Code Pro', sans-serif; }
+    .label {
+        font-weight: bold;
+    }
+}
+
 
 .glyphicon::before {
     vertical-align: -10%;
@@ -75,7 +87,8 @@ div.page-header + .page-content {
 
 h2, h3, h4 {
     margin: 0;
-    font-size: 2rem;
+    font-size: 1.8rem;
+    line-height: 3.4rem;
 }
     h2 small {
         font-size: 50%;
@@ -90,7 +103,7 @@ h2, h3, h4 {
 }
 
 .manual_sub_search {
-    margin: 10px 10px 0;
+    margin: 0.6rem 0.3rem 0;
     text-align: center;
     color: #DDD;
     display: none;
@@ -102,6 +115,7 @@ h2, h3, h4 {
     color: #CCC;
     font-size: 80%;
     margin: 0 3px 0 7px;
+    -webkit-font-smoothing: antialiased;
 }
 
 .alert-noclose {
@@ -111,6 +125,14 @@ h2, h3, h4 {
 .alert-info .nav > li > a:focus {
     background-color: #F4FBFF;
 }
+
+.nav-header {
+    padding: 3px 5px;
+}
+.nav > li > a {
+    padding: 5px 10px;
+}
+
 
 /*==========  DOWNLOADS  ==========*/
 .dl .remove {
@@ -136,7 +158,7 @@ h2 .remove.finished {
 h2 .remove.finished {
     display: none;
     visibility: hidden;
-    margin: 10px 5px 0 0;
+    margin: 0.7rem 5px 0 0;
     font-size: 14px;
     height: 24px;
     width: 24px;
